[project]
name = "address-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gabrieldewet", email = "giebels.dewet@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "levenshtein>=0.27.1",
]

[project.scripts]
address-matcher = "address_matcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
